--- a/docs/dokumentace.tex
+++ b/docs/dokumentace.tex
@@ -177,7 +177,7 @@ keywordstyle=\color{blue}
 
     \section{Uživatelská příručka}
     \subsection{Překlad a sestavení projektu}
-    Pro překlad a sestavení projektu je potřeba mít pouze nainstalovaný programovací jazyk go.
+    Pro překlad a sestavení projektu je potřeba mít pouze nainstalovaný programovací jazyk go, a to minimálně ve verzi \texttt{1.13.6}.
     Následně už můžeme spustit kompilaci pouze pomocí \texttt{go build .}.
     Go automaticky stáhne všechny závislosti a provede překlad projektu.
     Pokud chceme projekt přímo spustit, tak je také možné použít příkaz \texttt{go run .}.
